ok well i think i messed up my site?

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 ---
 layout: default
 ---
-
+<html>
 <body>
     <div class="content">
            <p>Panic! In Static! Out-Manic!</p>
            <p>Don't you find it how romantic things used to be?</p>
     </div>
 </body>
+</html>
