trying something different

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@ layout: default
 <html>
 <body>
     <div class="content">
-           <p>Panic! In Static! Out-Manic!</p>
-           <p>Don't you find it how romantic things used to be?</p>
+        <h1>Hi, I'm Jake.</h1>
+           <p>I'm a student who loves graphic design and web development.</p>
+           <button class="uiButton"><a href="./about.html">Learn More →</a></button>
+
     </div>
 </body>
 </html>
