added some content

--- a/about.html
+++ b/about.html
@@ -4,7 +4,9 @@ layout: default
 <html>
 <body>
     <div class="content">
-        wowa about me
+        <h1>About</h1>
+        <p>Heyo, I'm Jake.<br>I'm a student who loves graphic, web, and game design. <small>that's... a LOT of design...</small></p>
+        <p>I'm skilled in creating content for Roblox, I make websites using HTML/CSS/Jekyll, and a mix of Photoshop, Procreate, and Canva when designing graphics.</p>
     </div>
 </body>
 </html>
