--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ layout: default
 <html>
 <body>
     <div class="content">
-        <h1>Hi, I'm Jake.</h1>
-           <p>I'm a student who loves graphic design and web development.</p>
-           <button class="uiButton"><a href="./about.html">Learn More →</a></button>
-
+        <h1>Heyo, I'm Jake!</h1>
+        <p>I'm a student who loves graphic, web, and game design. <small>that's... a LOT of design...</small><br>
+        I'm skilled in creating content for Roblox, I make websites using HTML/CSS/Jekyll, and a mix of Photoshop, Procreate, and Canva when designing graphics.</p>
+        <a href="./about.html"><button class="uiButton">Learn More →</button></a>
     </div>
 </body>
 </html>
