--- a/about.html
+++ b/about.html
@@ -7,6 +7,12 @@ layout: default
         <h1>About</h1>
         <p>Heyo, I'm Jake.<br>I'm a student who loves graphic, web, and game design. <small>that's... a LOT of design...</small></p>
         <p>I'm skilled in creating content for Roblox, I make websites using HTML/CSS/Jekyll, and a mix of Photoshop, Procreate, and Canva when designing graphics.</p>
+        <br>
+        <div class="subContent">
+            <div style="display: flex;"><p><b>Certifications</b></p></div>
+            <img src="./src/img/pfp.png">
+
+        </div>
     </div>
 </body>
 </html>
