--- a/about.html
+++ b/about.html
@@ -10,7 +10,9 @@ layout: default
         <br>
         <div class="subContent">
             <div style="display: flex;"><p><b>Certifications</b></p></div>
-            <img src="./src/img/pfp.png">
+            <img width="15%" height="15%" src="https://csp25.edu.sirkorgo.com/content/image/computerhardware.png">
+            <img width="15%" height="15%" src="https://csp25.edu.sirkorgo.com/content/image/cybersecurity.png">
+            <img width="15%" height="15%" src="https://images.credly.com/images/68c0b94d-f6ac-40b1-a0e0-921439eb092e/image.png">
 
         </div>
     </div>
