--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,9 @@ layout: default
 <html>
 <body>
     <div class="content">
-           wowza contact me
+           <h1>Contact</h1>
+           <p>You can get in touch with me on these platforms.</p>
+           
     </div>
 </body>
 </html>
