--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,20 @@ layout: default
 <body>
     <div class="content">
            <h1>Contact</h1>
-           <p>You can get in touch with me on these platforms.</p>
-           
+            <p>Fill in the form to contact me.</p>
+            <small>The data collected in this form is not collected in any way.</small>
+            <br>
+            <form action="./src/js/form.php" method="POST">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email">
+                <br>
+                <label for="msg">Message</label>
+                <br>
+                <textarea id="msg" name="msg" rows="4" cols="50"></textarea>
+                <input type="submit" value="Submit">
+            </form>
     </div>
 </body>
 </html>
