--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
         <div class="flexgrid1">
             <div>
                 <h1>Heyo, I'm Jake!</h1>
-                <p>I'm a student who loves graphic, web, and game design. <small>that's... a LOT of design...</small><br>
+                <p>I'm a student who loves graphic, web, and game design.<br>
                 I'm skilled in creating content for Roblox, I make websites using HTML/CSS/Jekyll, and a mix of Photoshop, Procreate, and Canva when designing graphics.</p>
                 <a href="./about.html"><button class="uiButton">Learn More →</button></a>
             </div>
