--- a/about.html
+++ b/about.html
@@ -15,6 +15,13 @@ layout: default
             <img width="15%" height="15%" src="https://images.credly.com/images/68c0b94d-f6ac-40b1-a0e0-921439eb092e/image.png">
 
         </div>
+        <h2>A little bit more about me...</h2>
+        <p>I've always had a passion for tinkering with technology, and designing stuff. When I was younger I was constantly installing different Linux distros on my old computers, and messing with them. Recently, I've been tinkering with Nextcloud, Jellyfin, Homebridge, and all that good stuff. But that's more on the IT side of tech. I've also been experimenting with Jekyll, HTML, CSS, and a bit of JavaScript in my computer science classes. I find it fun to learn about web technologies.</p>
+        <div style="align-items: center; text-align: center;">
+            <p>Learn more about me on this site!</p>
+            <a href="./projects.html"><button class="uiButton">Projects →</button></a>
+        </div>
+        
     </div>
 </body>
 </html>
