--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,13 @@ layout: default
 <html>
 <body>
     <div class="content">
-           wowza proejcts me
+           <h2>Projects</h2>
+           <p>A showcase of things I have made in the past.</p>
+           <div class="subContent">
+                <div style="display: flex;"><p><b>sirkorgo.com</b></p></div>
+                <p>sirkorgo.com is my hobby site i use for my personal stuff (eg: a blog!) sirkorgo is my little fox oc that i use!</p>
+                   
+           </div>
     </div>
 </body>
 </html>
