finishing up the projects page

--- a/projects.html
+++ b/projects.html
@@ -4,12 +4,28 @@ layout: default
 <html>
 <body>
     <div class="content">
-           <h2>Projects</h2>
-           <p>A showcase of things I have made in the past.</p>
+           <h2 style="margin: 0;">Projects</h2>
+           <p style="margin-top: 3px; margin-bottom: 20px;">A showcase of things I have made in the past.</p>
            <div class="subContent">
-                <div style="display: flex;"><p><b>sirkorgo.com</b></p></div>
-                <p>sirkorgo.com is my hobby site i use for my personal stuff (eg: a blog!) sirkorgo is my little fox oc that i use!</p>
-                   
+                <div class="subContentHeader">
+                    <div style="display: flex; align-items: center; gap: 5px;">
+                    <img src="https://sirkorgo.com/src/img/srkgo-think.gif" width="5%" height="5%">
+                    <p><b>sirkorgo.com</b><br>sirkorgo.com is my hobby site I use for my personal stuff (eg: a blog!) Sirkorgo is my original creation (OC) that I draw for fun! Something notable about this site is that it's my first site made in Jekyll!</p>
+                    </div>
+                    <a href="https://sirkorgo.com"><button class="subContentBtn">Visit</button></a>
+                </div>
+                <img src="./src/img/srkgowb.png" width="30%" height="30%">
+           </div>
+           <br>
+           <div class="subContent">
+                <div class="subContentHeader">
+                    <div style="display: flex; align-items: center; gap: 5px;">
+                    <img src="https://sirkorgo.com/src/img/srkgo-think.gif" width="5%" height="5%">
+                    <p><b>Web Design Assignment #1</b><br>This site is a "autobiography" that I was assigned to make in my computer science.</p>
+                    </div>
+                    <a href="https://sirkorgo.com"><button class="subContentBtn">Visit</button></a>
+                </div>
+                <img src="./src/img/srkgowb.png" width="30%" height="30%">
            </div>
     </div>
 </body>
