finished up projects page

--- a/projects.html
+++ b/projects.html
@@ -4,11 +4,11 @@ layout: default
 <html>
 <body>
     <div class="content">
-           <h2 style="margin: 0;">Projects</h2>
-           <p style="margin-top: 3px; margin-bottom: 20px;">A showcase of things I have made in the past.</p>
+           <h2>Projects</h2>
+           <p style="margin-bottom: 20px;">A showcase of things I have made in the past.</p>
            <div class="subContent">
                 <div class="subContentHeader">
-                    <div style="display: flex; align-items: center; gap: 5px;">
+                    <div style="display: flex; align-items: center; gap: 10px;">
                     <img src="https://sirkorgo.com/src/img/srkgo-think.gif" width="5%" height="5%">
                     <p><b>sirkorgo.com</b><br>sirkorgo.com is my hobby site I use for my personal stuff (eg: a blog!) Sirkorgo is my original creation (OC) that I draw for fun! Something notable about this site is that it's my first site made in Jekyll!</p>
                     </div>
@@ -19,13 +19,24 @@ layout: default
            <br>
            <div class="subContent">
                 <div class="subContentHeader">
-                    <div style="display: flex; align-items: center; gap: 5px;">
-                    <img src="https://sirkorgo.com/src/img/srkgo-think.gif" width="5%" height="5%">
+                    <div style="display: flex; align-items: center; gap: 10px;">
+                    <span class="material-symbols-outlined" style="color: white;">&#xe85d;</span>
                     <p><b>Web Design Assignment #1</b><br>This site is a "autobiography" that I was assigned to make in my computer science.</p>
                     </div>
-                    <a href="https://sirkorgo.com"><button class="subContentBtn">Visit</button></a>
+                    <a href="https://wb1.edu.sirkorgo.com"><button class="subContentBtn">Visit</button></a>
                 </div>
-                <img src="./src/img/srkgowb.png" width="30%" height="30%">
+                <img src="./src/img/wb1.png" width="30%" height="30%">
+           </div>
+           <br>
+           <div class="subContent">
+                <div class="subContentHeader">
+                    <div style="display: flex; align-items: center; gap: 10px;">
+                    <span class="material-symbols-outlined" style="color: white;">&#xe85d;</span>
+                    <p><b>Computer Science Portfolio 2024-25</b><br>A showcase of all the assignments I made in my computer science course during the 2024-25 schoolyear.</p>
+                    </div>
+                    <a href="https://csp25.edu.sirkorgo.com"><button class="subContentBtn">Visit</button></a>
+                </div>
+                <img src="./src/img/csp25.png" width="30%" height="30%">
            </div>
     </div>
 </body>
