made the contact form actually work

--- a/contact.html
+++ b/contact.html
@@ -5,15 +5,14 @@ layout: default
 <body>
     <div class="content">
            <h1>Contact</h1>
-            <p>Fill in the form to contact me.</p>
+            <p>Fill in the form to contact me. I'll try to respond as fast as I can!</p>
             <br>
-            <form>
+            <form action="https://formspree.io/f/mqawzeaj" method="POST">
                 <input class="inputField" type="text" id="name" placeholder="Name" name="name">
                 <input class="inputField" type="email" placeholder="Email" id="email" name="email">
                 <br>
                 <textarea style="margin-top: 5px;" class="inputField" id="msg" name="msg" rows="4" cols="50" placeholder="Message" ></textarea>
                 <br>
-                <small>The data collected in this form is not saved and is discarded upon submission.</small>
                 <br>
                 <input style="margin-top: 5px;" class="uiButton" type="submit" value="Send">
             </form>
